Rdap refactoring (#1221)
* Removed unit test class (it's difficult to maintain due to all the mocks, and the tests are duplicated as integration tests already).

* Refactoring